--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-class-component": "^7.2.3",
+    "vue-country-dropdown": "^2.0.8",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
